No-Cookie Policy update

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -38,30 +38,32 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <br><br>
             <b>0. Welcome to GENiALABILE</b>
             <br><br>
-            GENiALABILE not uses cookies and similar tracking technologies to improve user experience, analyze website performance, and deliver personalized content.
-            This policy explains what cookies are, why  we do not use them, and your options for managing cookies in other website.
+            GENiALABILE do not uses cookies and similar tracking technologies to improve user experience, analyze website performance, and deliver personalized content.
+            This No-Cookie Policy explains what cookies are, why  we do not use them, and your options for managing cookies in other website.
 
             <br><br><br>
             <b>1. What Are Cookies?</b>
             <br><br>
-            Cookies are small text files that are placed on your device by websites you visit. They serve a variety of purposes, such as remembering your preferences, enabling functionality, and collecting data for analytics.
+            Cookies are small text files that are placed on your device by websites you visit.
+            They serve a variety of purposes, such as remembering your preferences, enabling functionality, and collecting data for analytics.
 
             <br><br><br>
             <b>2. Types of Cookies We Do Not Use</b>
             <br><br>
             [·] Essential Cookies: Required for the operation of our website. These cookies cannot be disabled.<br>
-            [·] Analytics Cookies: Used to gather data on how users interact with our website, including page visits and time spent on pages. We use Google Analytics for this purpose.<br>
-            [·] Marketing Cookies: Help deliver relevant advertisements based on your browsing behavior.<br>
+            [·] Analytics Cookies: Used to gather data on how users interact with other website, including page visits and time spent on pages.
+            We do not use Google Analytics for this purpose.<br>
+            [·] Marketing Cookies: Help deliver relevant advertisements based on your browsing behavior.
 
             <br><br><br>
-            <b>3. How We Use Cookies</b>
+            <b>3. Why We Do Not Use Cookies</b>
             <br><br>
-            [·] To enhance website functionality and provide a seamless user experience.<br>
-            [·] To analyze traffic and performance using tools like Google Analytics.<br>
-            [·] To display personalized content and targeted advertisements.<br>
+            [·] We do not need to enhance website functionality and provide a seamless user experience.<br>
+            [·] We do not need to analyze traffic and performance using tools like Google Analytics.<br>
+            [·] We do not need to display personalized content and targeted advertisements.
 
             <br><br><br>
-            <b>4. Managing Your Cookies</b>
+            <b>4. Managing Your Cookies In Other Website</b>
             <br><br>
             You have the right to manage your cookie preferences:
             <br>
@@ -74,32 +76,35 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 
 
             <br><br>
-            If you do not agree with the use of cookies, you may disable them using the options above or exit this website immediately. Continuing to use this website implies consent to our Cookie Policy.
+            If you do not agree with the use of cookies, you may disable them using the dedicated options or exit other website immediately.
+            Continuing to use other website implies consent to our Cookie Policy. In our website this action is not needed, because we do not use cookies.
 
 
             <br><br><br>
-            <b>5. Cookies Used on This Website</b>
+            <b>5. Cookies Do Not Used on This Website</b>
             <br><br>
-            Below is a list of the cookies we use:
+            Below is a list of the cookies we do not use:
             <br>
             [·] Session Cookies: Temporary cookies that expire when you close your browser.<br>
             [·] Persistent Cookies: Remain on your device until deleted manually or automatically after a defined period.<br>
-            [·] Third-Party Cookies: Set by external services like Google Analytics or social media platforms.<br>
+            [·] Third-Party Cookies: Set by external services like Google Analytics or social media platforms.
 
             <br><br><br>
             <b>6. Data Protection</b>
             <br><br>
-            All data collected via cookies is anonymized wherever possible. Personal data processed through cookies complies with applicable laws, including GDPR (EU) and CCPA (US).
+            All data collected via cookies is anonymized wherever possible.
+            Personal data processed through cookies complies with applicable laws, including GDPR (EU) and CCPA (US).
 
             <br><br><br>
             <b>7. Updates to This Policy</b>
             <br><br>
-            We reserve the right to update this Cookie Policy. Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
+            We reserve the right to update this No-Cookie Policy.
+            Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
 
             <br><br><br>
             <b>8. Contact</b>
             <br><br>
-            If you have any questions or concerns about our use of cookies, please contact us at: 
+            If you have any questions or concerns about our not-use of cookies, please contact us at: 
             <a href="mailto:genialabile@gmail.com?subject=Privacy%20Policy%20For" style="font-weight: normal;">genialabile@gmail.com</a>
             </p>
    
