--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@ header.html + CSS
 <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
 
 <!-- Titolo -->
-<title>GENiALABILE</title>
+<title id="dynamic-title">Placeholder Title</title>
 
 <!-- Icone e Font -->
 <link rel="icon" href="gen-favicon-rd.ico" type="image/x-icon">
