Aggiornato il titolo della politica sui cookie e implementato il caricamento dinamico del titolo nella sezione header

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -14,7 +14,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <head>
         <!-- Header -->
         <script>
-            const pageTitle = "GENiALABILE - No-Cookie Policy"; // Sostituisci con il titolo della pagina
+            const pageTitle = "GENiALABILE | No-Cookie Policy"; // Sostituisci con il titolo della pagina
         </script>
 
         <script>
