--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <head>
         <!-- Header -->
         <script>
+            const pageTitle = "GENiALABILE"; // Sostituisci con il titolo della pagina
+        </script>
+
+        <script>
             fetch('header.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
+                     // Modifica dinamicamente il titolo
+                    const dynamicTitle = document.getElementById('dynamic-title');
+                    if (dynamicTitle && typeof pageTitle !== 'undefined') {
+                        dynamicTitle.textContent = pageTitle; // Imposta il titolo dinamico
+                    }
                 })
                 .catch(error => console.error('Errore nel caricamento header:', error));
         </script> <!-- Header -->
