--- a/contacts.html
+++ b/contacts.html
@@ -14,10 +14,19 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <head>
         <!-- Header -->
         <script>
+            const pageTitle = "GENiALABILE | Contacts"; // Sostituisci con il titolo della pagina
+        </script>
+
+        <script>
             fetch('header.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
+                     // Modifica dinamicamente il titolo
+                    const dynamicTitle = document.getElementById('dynamic-title');
+                    if (dynamicTitle && typeof pageTitle !== 'undefined') {
+                        dynamicTitle.textContent = pageTitle; // Imposta il titolo dinamico
+                    }
                 })
                 .catch(error => console.error('Errore nel caricamento header:', error));
         </script> <!-- Header -->
@@ -36,15 +45,17 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                 <br><br>
                 <b>0. Welcome to GENiALABILE</b>
                 <br><br>
-                If you have any questions, feedback, or inquiries about GENiALABILE, feel free to reach out to us using the information below.
+                If you have any questions, feedback, or inquiries about GENiALABILE, feel free to reach out to us using the information below.<br>
                 Join in our preview access for beta tester.
+                    <a href= "mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >
+                    [>]</a>
             
 
             <br><br><br>
             <b>1. Website</b>
             <br><br>
-                Visit our official website: 
-                <a href="/" style="font-weight: normal;">genialabile.com</a>
+                Our official website: 
+                    <a href="/" style="font-weight: normal;">genialabile.com</a>
 
             <br><br><br>
             <b>2. Email</b>
