Aggiunto il documento della politica No-Cookie e aggiornato il link nella sezione footer

--- a/footer.html
+++ b/footer.html
@@ -24,7 +24,7 @@ footer.html
             <br>
             <a href="/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
             <a href="/privacy-policy.html" style="font-weight: normal">PRIVACY</a> | 
-            <a href="/cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
+            <a href="/no-cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
             <a href="/accessibility.html" style="font-weight: normal">ACCESS</a> | 
             <a href="/contacts.html" style="font-weight: normal">CONTACT</a>
             <!-- | <a href="/faq.html" style="font-weight: normal">FAQ</a>  -->
