Corretto il testo della politica No-Cookie per riflettere l'assenza di utilizzo dei cookie nel sito

--- a/no-cookie-policy.html
+++ b/no-cookie-policy.html
@@ -86,7 +86,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 
             <br><br>
             If you do not agree with the use of cookies, you may disable them using the dedicated options or exit other website immediately.
-            Continuing to use other website implies consent to our Cookie Policy. In our website this action is not needed, because we do not use cookies.
+            Continuing to use other website implies consent to  No-Cookie Policy. In our website this action is not needed, because we do not use cookies.
 
 
             <br><br><br>
