Aggiunti meta tag e titolo dinamico nella sezione head di index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 --->
 <!DOCTYPE html>
 <html lang="en">
+        <!-- Meta -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+
+    <!-- Titolo -->
+    <title id="dynamic-title">GENiALABILE</title>
     <head>
         <!-- Header -->
         <script>
