Corretto il link di copyright e aggiornato il titolo dinamico in diverse pagine

--- a/OLD-PrYvacy-policy.html
+++ b/OLD-PrYvacy-policy.html
@@ -293,7 +293,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
         <!-- Sezione Informazioni -->
         <h1>Privacy Policy</h1>
         <p style="font-size: 0.6rem;">
-            {Last Updated: 10 January 2025}
+            {Last Updated: 09 January 2025}
         </p>
 
         <p class="important-p">
@@ -306,18 +306,20 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <b>1. Information We Collect</b>
             <br><br>
             [·] Personal Identification Data: Name, email address, and other contact details provided by you.<br>
-            [·] Essential Cookies: Required for the operation of our website.
+            [·] Usage Data: Information about how you interact with our website, such as pages visited and time spent on the platform.<br>
+            [·] Cookies and Tracking Technologies: Includes tools like Google Analytics to gather anonymized data on user behavior.
 
             <br><br><br>
             <b>2. How We Use Your Information</b>
             <br><br>
+            [·] Service Improvement: Analyze usage patterns to enhance website performance.<br>
             [·] Communication: Respond to inquiries and provide updates.<br>
             [·] Compliance: Fulfill legal obligations and enforce our Terms and Conditions.
 
             <br><br><br>
             <b>3. Google Analytics</b>
             <br><br>
-            [·] We do not use Google Analytics to understand user interactions. It collects anonymized data such as IP addresses, geographic location, and browsing activity.<br>
+            [·] We use Google Analytics to understand user interactions. It collects anonymized data such as IP addresses, geographic location, and browsing activity.<br>
             [·] Opt-Out: Users can disable Google Analytics tracking through the 
             <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;">Google Analytics Opt-Out Browser Add-on</a>.
 
@@ -336,13 +338,13 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <br><br><br>
             <b>5. Data Storage and Retention</b>
             <br><br>
-            [·] Your data is securely stored on servers located by email.<br>
+            [·] Your data is securely stored on servers located in [Insert Location].<br>
             [·] We retain your data only as long as necessary for the outlined purposes or as required by law.
 
             <br><br><br>
             <b>6. Cookies</b>
             <br><br>
-            [·] Cookies are used to improve user experience.<br>
+            [·] Cookies are used to improve user experience, track usage, and personalize content.<br>
             [·] Manage your preferences through browser settings or via the 
             <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;">Your Online Choices</a> platform.
 
@@ -355,12 +357,12 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <b>8. Sharing Your Information</b>
             <br><br>
             [·] We do not sell your personal data.<br>
-            [·] Data may be shared with service providers (e.g., hosting or mail provider) or legal authorities, if required.
+            [·] Data may be shared with service providers (e.g., hosting, analytics) or legal authorities, if required.
 
             <br><br><br>
             <b>9. International Transfers</b>
             <br><br>
-            [·] Your information may be transferred outside your Country. We ensure data protection measures are in place.
+            [·] Your information may be transferred outside your country. We ensure data protection measures are in place.
 
             <br><br><br>
             <b>10. Changes to This Privacy Policy</b>
