--- a/no-cookie-policy.html
+++ b/no-cookie-policy.html
@@ -2,7 +2,7 @@
 © 2025 GENiALABILE. All Rights Reserved.  
 A Bio-GPT Project—Designed by seiseisette.    
 ---
- 2025 Copyright @seiseisette | x.com/seiseisette
+ 2025 Copyright @seiseisette | https://x.com/seiseisette
 ---
 Licensed under the Apache License, Version 2.0.
 You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
@@ -14,15 +14,14 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <head>
         <!-- Header -->
         <script>
-            const pageTitle = "GENiALABILE | No-Cookie Policy"; // Sostituisci con il titolo della pagina
+            const pageTitle = "GENiALABILE | No-Cookie Policy"; 
         </script>
-
         <script>
             fetch('header.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
-                     // Modifica dinamicamente il titolo
+               
                     const dynamicTitle = document.getElementById('dynamic-title');
                     if (dynamicTitle && typeof pageTitle !== 'undefined') {
                         dynamicTitle.textContent = pageTitle; // Imposta il titolo dinamico
@@ -57,12 +56,11 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             They serve a variety of purposes, such as remembering your preferences, enabling functionality, and collecting data for analytics.
 
             <br><br><br>
-            <b>2. Types of Cookies We Do Not Use</b>
+            <b>2. Types of Cookies We Only Use</b>
             <br><br>
-            [·] Essential Cookies: Required for the operation of our website. These cookies cannot be disabled.<br>
-            [·] Analytics Cookies: Used to gather data on how users interact with other website, including page visits and time spent on pages.
-            We do not use Google Analytics for this purpose.<br>
-            [·] Marketing Cookies: Help deliver relevant advertisements based on your browsing behavior.
+            [·] Essential Cookies: Required for the operation of our website.
+            These cookies cannot be disabled. Such responsive design, for example.
+            
 
             <br><br><br>
             <b>3. Why We Do Not Use Cookies</b>
