--- a/header.html
+++ b/header.html
@@ -2,12 +2,12 @@
 © 2025 GENiALABILE. All Rights Reserved.  
 A Bio-GPT Project—Designed by seiseisette.    
 ---
- 2025 Copyright @seiseisette | x.com/seiseisette
+ 2025 Copyright @seiseisette | https://x.com/seiseisette
 ---
 Licensed under the Apache License, Version 2.0.
-You may obtain a copy of the License at https://www.apache.org/licenses/LICENSE-2.0  
+You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
 ---
-genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page   
+hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
 
 header.html + CSS
 //-->
@@ -32,7 +32,7 @@ header.html + CSS
        Variabili CSS§
     ============================= */
     :root {
-        --background-color: #074264;
+        --background-color: #21002c;
         --info-background: #000000;
         --info-text: #f4f4f4;
         --borders: #f4f4f4;
