Aggiunto un commento per la sezione CARD nel file contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -106,8 +106,8 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                         </p>
                     </div>
                 </div>
-
-           </main>
+            <!--CARD--->   
+        </main>
 
 
         <!-- Footer ------------------------------------------------------------------>
