--- a/header.html
+++ b/header.html
@@ -22,7 +22,7 @@ header.html + CSS
 <title id="dynamic-title">GENiALABILE</title>
 
 <!-- Icone e Font -->
-<link rel="icon" href="gen-favicon-rd.ico" type="image/x-icon">
+<link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
 
