--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -12,7 +12,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Header -->
+        <!-- Header --><link rel="icon" href="gen-favicon-rd.ico" type="image/x-icon">
         <script>
             const pageTitle = "GENiALABILE | Terms & Conditions"; 
         </script>
