Aggiornato il titolo dinamico in diverse pagine per migliorare la coerenza del branding

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -14,7 +14,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <head>
         <!-- Header --><link rel="icon" href="gen-favicon-rd.ico" type="image/x-icon">
         <script>
-            const pageTitle = "GENiALABILE | Terms & Conditions"; 
+            const pageTitle = "Terms & Conditions | GENiALABILE"; 
         </script>
         <script>
             fetch('header.html')
