--- a/contacts.html
+++ b/contacts.html
@@ -14,7 +14,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <head>
         <!-- Header -->
         <script>
-            const pageTitle = "GENiALABILE | Contacts"; 
+            const pageTitle = "Contacts | GENiALABILE"; 
         </script>
         <script>
             fetch('header.html')
