--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <head>
         <!-- Header -->
         <script>
-            const pageTitle = "GENiALABILE"; 
+            const pageTitle = "Weolcome | GENiALABILE"; 
         </script>
         <script>
             fetch('header.html')
