--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,7 +14,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <head>
         <!-- Header -->
         <script>
-            const pageTitle = "GENiALABILE | Privacy Policy"; 
+            const pageTitle = "Privacy Policy | GENiALABILE"; 
         </script>
         <script>
             fetch('header.html')
