--- a/no-cookie-policy.html
+++ b/no-cookie-policy.html
@@ -12,36 +12,25 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Meta -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+        <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+        <!-- Titolo -->
+        <title>GENiALABILE | No-Cookie Policy</title>
+        <!-- Icone e Font -->
+        <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+        <!-- Header -->
         <script>
-            const pageTitle = "No-Cookie Policy | GENiALABILE";
-        </script>
-    
-        <script>
-            document.addEventListener('DOMContentLoaded', function () {
-                // Carica il file header.html
-                fetch('header.html')
-                    .then(response => response.text())
-                    .then(data => {
-                        // Aggiungi il contenuto del header.html al <head>
-                        document.head.innerHTML += data;
-    
-                        // Aggiorna il titolo dinamico
-                        if (typeof pageTitle !== 'undefined') {
-                            const titleElement = document.getElementById('dynamic-title');
-                            if (titleElement) {
-                                titleElement.textContent = pageTitle;
-                            }
-                        }
-                        // Aggiungi la favicon
-                        const favicon = document.createElement('link');
-                        favicon.rel = 'icon';
-                        favicon.type = 'image/x-icon';
-                        favicon.href = 'gen-favicon-rd.ico'; // Percorso corretto
-                        document.head.appendChild(favicon);
-                    })
-                    .catch(error => console.error('Errore nel caricamento dell\'header:', error));
-            });
-        </script>
+            fetch('header.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.querySelector('head').innerHTML += data;
+                })
+                .catch(error => console.error('Errore nel caricamento header:', error));
+        </script> <!-- Header -->
     </head>
 
 
