--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,4 @@
-<<!---///  
+<!---///  
 © 2025 GENiALABILE. All Rights Reserved.  
 A Bio-GPT Project—Designed by seiseisette.    
 ---
@@ -12,24 +12,25 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Meta -->
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+        <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+        <!-- Titolo -->
+        <title>GENiALABILE | Privacy Policy</title>
+        <!-- Icone e Font -->
+        <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
         <!-- Header -->
-        <script>
-            const pageTitle = "Privacy Policy | GENiALABILE"; 
-        </script>
         <script>
             fetch('header.html')
                 .then(response => response.text())
                 .then(data => {
                     document.querySelector('head').innerHTML += data;
-                 
-                    const dynamicTitle = document.getElementById('dynamic-title');
-                    if (dynamicTitle && typeof pageTitle !== 'undefined') {
-                        dynamicTitle.textContent = pageTitle; 
-                    }
                 })
                 .catch(error => console.error('Errore nel caricamento header:', error));
         </script> <!-- Header -->
-
     </head>
 
     <body>
