Aggiunto il reindirizzamento HTTPS e aggiornati i meta tag per migliorare la sicurezza e la coerenza delle pagine contatti, privacy policy, no-cookie policy, termini e condizioni, e homepage.

--- a/contacts.html
+++ b/contacts.html
@@ -12,10 +12,12 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Meta -->
+        <!-- Force HTTPS -->
+        <meta http-equiv="refresh" content="0; URL=https://www.genialabile.com/contacts.html">
+         <!-- Force HTTPS -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+        <meta name="description" content="GENiALABILE - Contacts & Social Media and Credits.">
         <!-- Titolo -->
         <title>GENiALABILE | Contacts</title>
         <!-- Icone e Font -->
