--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Meta -->
+        <!-- Force HTTPS -->
+        <meta http-equiv="refresh" content="0; URL=https://www.genialabile.com/">
+         <!-- Force HTTPS -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
-        <!-- Titolo -->
         <title>GENiALABILE</title>
         <!-- Icone e Font -->
         <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
+        <!-- Font -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
         <!-- Header -->
