--- a/no-cookie-policy.html
+++ b/no-cookie-policy.html
@@ -12,10 +12,12 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Meta -->
+        <!-- Force HTTPS -->
+        <meta http-equiv="refresh" content="0; URL=https://www.genialabile.com/no-cookie-policy.html">
+         <!-- Force HTTPS -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+        <meta name="description" content="GENiALABILE - Non Cookie Policy Content.">
         <!-- Titolo -->
         <title>GENiALABILE | No-Cookie Policy</title>
         <!-- Icone e Font -->
