--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -12,12 +12,14 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Meta -->
+        <!-- Force HTTPS -->
+        <meta http-equiv="refresh" content="0; URL=https://www.genialabile.com/terms-and-conditions.html">
+         <!-- Force HTTPS -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+        <meta name="description" content="GENiALABILE - Terms & Conditions Disclosure.">
         <!-- Titolo -->
-        <title>GENiALABILE | Terms & Condiotions</title>
+        <title>GENiALABILE | Terms & Conditions</title>
         <!-- Icone e Font -->
         <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
