Corretto il link al sito e aggiornato il testo del footer in diverse pagine per migliorare la coerenza e la correttezza delle informazioni.

--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@ A Bio-GPT Project—Designed by seiseisette.
 Licensed under the Apache License, Version 2.0.
 You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
 ---
-hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
+hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page  
 --->
 <!DOCTYPE html>
 <html lang="en">
