--- a/accessibility.html
+++ b/accessibility.html
@@ -7,14 +7,11 @@ A Bio-GPT Project—Designed by seiseisette.
 Licensed under the Apache License, Version 2.0.
 You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
 ---
-hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
+hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page  
 --->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Force HTTPS -->
-        <meta http-equiv="refresh" content="0; URL=https://www.genialabile.com/accessibility.html">
-         <!-- Force HTTPS -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <meta name="description" content="GENiALABILE - Accessibility Statement.">
