--- a/header.html
+++ b/header.html
@@ -13,7 +13,11 @@ header.html + CSS
 //-->
 
 
-    <!-- Stili CSS -->
+<!-- Header -->
+    <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+<!-- Stili CSS -->
     <style>
        
         :root {
