--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
         <title>GENiALABILE</title>
+        <!-- HEADER -->
         <script>
             fetch('header.html')
                 .then(response => response.text())
