Aggiornata la data di ultima modifica nella dichiarazione di accessibilità, corretto un errore di battitura nel link e modificato il colore di sfondo per migliorare l'aspetto visivo.

--- a/accessibility.html
+++ b/accessibility.html
@@ -37,7 +37,8 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
         <!-- Contenuto Principale -->
         <main>
             <h1>Accessibility Statement</h1>
-            <p style="font-size: 0.6rem;">{Last Updated: 09 January 2025}</p>
+            <p style="font-size: 0.6rem;">
+                {Last Updated: 10 January 2025}</p>
 
             <p class="important-p">
 
