--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@ footer.html
 //-->
 
 
-<footer> <b></b>LINKED!MORE
+<footer> <b></b>
     ©2025 <a href="/" style="font-weight: normal">GENiALABILE</a>.
     All Rights Reserved.
     A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette"  style="font-weight: normal">seiseisette</a>.
