--- a/header.html
+++ b/header.html
@@ -21,7 +21,7 @@ header.html + CSS
     <style>
        
         :root {
-            --background-color: #5b0e75;
+            --background-color: #000000;
             --info-background: #000000;
             --info-text: #f4f4f4;
             --borders: #f4f4f4;
