Corretto un errore di battitura nella pagina della privacy e aggiornato la data di ultima modifica nei termini e condizioni.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -81,7 +81,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
                 <br><br><br>
                 <b>5. Data Storage and Retention</b>
                 <br><br>
-                [·] Your data is securely stored on servers located by email.<br>
+                [·] Your data is securely stored on servers located.<br>
                 [·] We retain your data only as long as necessary for the outlined purposes or as required by law.
 
                 <br><br><br>
@@ -100,7 +100,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
                 <b>8. Sharing Your Information</b>
                 <br><br>
                 [·] We do not sell your personal data.<br>
-                [·] Data may be shared with service providers (e.g., hosting or mail provider) or legal authorities, if required.
+                [·] Data may be shared with service providers (e.g., hosting and email) or legal authorities, if required.
 
                 <br><br><br>
                 <b>9. International Transfers</b>
