Corretto il testo nella politica sui cookie per migliorare la chiarezza e la coerenza, aggiornato il titolo e rimosso contenuti ridondanti.

--- a/no-cookie-policy.html
+++ b/no-cookie-policy.html
@@ -46,8 +46,9 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
             <br><br>
             <b>0. Welcome to GENiALABILE</b>
             <br><br>
-            GENiALABILE do not uses cookies and similar tracking technologies to improve user experience, analyze website performance, and deliver personalized content.
-            This No-Cookie Policy explains what cookies are, why  we do not use them, and your options for managing cookies in other website.
+            GENiALABILE do not uses cookies and similar for tracking users, analyze website performance, and deliver personalized content.
+            This Cookie Policy explains what cookies are, why we do not use them, and your options for managing cookies in other website.
+            We use only the minimium ones required to improve user experience, without data collecting.
 
             <br><br><br>
             <b>1. What Are Cookies?</b>
@@ -58,7 +59,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
             <br><br><br>
             <b>2. Types of Cookies We Only Use</b>
             <br><br>
-            [·] Essential Cookies: Required for the operation of our website.
+            Essential Cookies: Required for the operation of our website.
             These cookies cannot be disabled. Such responsive design, for example.
             
 
@@ -70,7 +71,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
             [·] We do not need to display personalized content and targeted advertisements.
 
             <br><br><br>
-            <b>4. Managing Your Cookies In Other Website</b>
+            <b>4. Managing Your Cookies In Cookie's Website</b>
             <br><br>
             You have the right to manage your cookie preferences:
             <br>
@@ -80,15 +81,14 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
             <a href="https://optout.aboutads.info/" target="_blank" style="font-weight: normal;">YourAdChoices</a> (US) to opt out of targeted advertising.<br>
             [·] Disable Google Analytics tracking with the 
             <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;">Google Analytics Opt-Out Browser Add-on</a>.
-
-
             <br><br>
-            If you do not agree with the use of cookies, you may disable them using the dedicated options or exit other website immediately.
-            Continuing to use other website implies consent to  No-Cookie Policy. In our website this action is not needed, because we do not use cookies.
+            <i>
+            If you do not agree with the use of cookies, you may disable them using the dedicated options or exit cookie's website immediately.
+            Continuing to use this website implies consent to Cookie Policy.</i>
 
 
             <br><br><br>
-            <b>5. Cookies Do Not Used on This Website</b>
+            <b>5. Cookies Do Not Used On This Website</b>
             <br><br>
             Below is a list of the cookies we do not use:
             <br>
@@ -105,13 +105,13 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
             <br><br><br>
             <b>7. Updates to This Policy</b>
             <br><br>
-            We reserve the right to update this No-Cookie Policy.
+            We reserve the right to update this Cookie Policy.
             Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
 
             <br><br><br>
             <b>8. Contact</b>
             <br><br>
-            If you have any questions or concerns about our not-use of cookies, please contact us at: 
+            If you have any questions or concerns about our use of cookies, please contact us at: 
             <a href="mailto:genialabile@gmail.com?subject=Privacy%20Policy%20For" style="font-weight: normal;">genialabile@gmail.com</a>
             </p>
    
