--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -14,9 +14,9 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <meta name="description" content="GENiALABILE - Non Cookie Policy Content.">
+        <meta name="description" content="GENiALABILE - Non-Cookie Policy Content.">
         <!-- Titolo -->
-        <title>GENiALABILE | No-Cookie Policy</title>
+        <title>GENiALABILE | Cookie Policy</title>
         <!-- Icone e Font -->
         <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
@@ -37,7 +37,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
     <!-- Contenuto Principale -->
     <main>
         <!-- Sezione Informazioni -->
-        <h1>No-Cookie Policy</h1>
+        <h1>Cookie Policy</h1>
         <p style="font-size: 0.6rem;">
             {Last Updated: 10 January 2025}
         </p>
