--- a/contacts.html
+++ b/contacts.html
@@ -45,7 +45,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
                 <br><br>
                 <b>0. Welcome to GENiALABILE</b>
                 <br><br>
-                If you have any questions, feedback, or inquiries about GENiALABILE, feel free to reach out to us using the information below.<br>
+                If you have any questions, feedback, or inquiries about GENiALABILE, feel free to reach out to us using the information below.
                 Join in our preview access for beta tester.
                     <a href= "mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >
                     [>]</a>
