Aggiunta meta tag per il colore del tema nel file header.html per supportare modalità chiare e scure.

--- a/header.html
+++ b/header.html
@@ -17,6 +17,9 @@ header.html + CSS
     <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
     
 <!-- Stili CSS -->
     <style>
