Rimosso commento superfluo nel codice JavaScript per la visualizzazione del corpo della pagina

--- a/header.html
+++ b/header.html
@@ -23,11 +23,10 @@ header.html + CSS
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             setTimeout(function () {
-                document.body.style.display = "block"; // Mostra il corpo della pagina
-            }, 2000); // Delay di 2000ms (2 secondi)
+                document.body.style.display = "block";
+            }, 2000); // 
         });
     
-        // Nascondi il corpo della pagina fino al caricamento
         document.body.style.display = "none";
     </script>
 <!-- Stili CSS -->
