Aggiunto script per ritardare la visualizzazione del corpo della pagina e migliorata la gestione della visibilità con classi CSS

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
 
         </main>
 
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                setTimeout(function () {
+                    document.body.classList.add("visible"); // Aggiunge la classe visibile
+                }, 2000); // Aspetta 2 secondi
+            });
+        </script>
+
 
         <!-- Footer ------------------------------------------------------------------>
             <script>
