--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
         <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <meta name="description" content="GENiALABILE - A Bio-GPT Project designed to inspire multidimensional solutions and unlock creativity.">
+        <meta name="color-scheme" content="dark">
         <title>GENiALABILE</title>
         <!-- HEADER -->
         <script>
