Impostato lo sfondo nero nel file index.html per supportare il tema scuro

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
         </script> <!-- Header -->
     </head>
 
-    <body>
+    <body style="background-color: black;">
 
         <!-- Contenuto Principale -->
         <main>
