--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
         </script> <!-- Header -->
     </head>
 
-    <body style="background-color: #000000;">
+    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
 
         <!-- Contenuto Principale -->
         <main>
