--- a/contacts.html
+++ b/contacts.html
@@ -33,7 +33,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
     </head>
 
 
-    <body>
+    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <!-- Contenuto Principale -->
         <main>
             <h1>Contact Us</h1>
@@ -111,23 +111,31 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
 
 
         <!-- Footer ------------------------------------------------------------------>
-            <script>
-                document.addEventListener('DOMContentLoaded', function() {
-                    fetch('footer.html')
-                        .then(response => response.text())
-                        .then(data => {
-                            const body = document.querySelector('body');
-                            const footerContainer = document.createElement('div');
-                            footerContainer.innerHTML = data;
-                            body.appendChild(footerContainer);
-                        })
-                    .catch(error => console.error('Errore nel caricamento del footer:', error));
-                });
-            </script> 
-        <!-- Footer ------------------------------------------------------------------>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                fetch('footer.html')
+                    .then(response => response.text())
+                    .then(data => {
+                        const body = document.querySelector('body');
+                        const footerContainer = document.createElement('div');
+                        footerContainer.innerHTML = data;
+                        body.appendChild(footerContainer);
+                    })
+                .catch(error => console.error('Errore nel caricamento del footer:', error));
+            });
+        </script> 
+    <!-- Footer ------------------------------------------------------------------>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            setTimeout(function () {
+                document.body.classList.add("visible"); // Aggiunge la classe visibile
+            }, 2000); // Aspetta 2 secondi
+        });
+    </script>
 
 
-    </body>
+</body>
 </html>
 <!---//
 //ENDLINE & BYE BYE
