--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -32,7 +32,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
         </script> <!-- Header -->
     </head>
 
-    <body>
+    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <!-- Contenuto Principale -->
         <main>
             <!-- Sezione Informazioni -->
@@ -137,6 +137,14 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
                 });
             </script> 
         <!-- Footer ------------------------------------------------------------------>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                setTimeout(function () {
+                    document.body.classList.add("visible"); // Aggiunge la classe visibile
+                }, 2000); // Aspetta 2 secondi
+            });
+        </script>
 
 
     </body>
