--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -32,7 +32,7 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
         </script> <!-- Header -->
     </head>
 
-    <body>
+    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <!-- Contenuto Principale -->
         <main>
             <!-- Sezione Informazioni -->
@@ -133,7 +133,6 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
             </p>    
         </main>
 
-
         <!-- Footer ------------------------------------------------------------------>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
@@ -149,6 +148,14 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
                 });
             </script> 
         <!-- Footer ------------------------------------------------------------------>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                setTimeout(function () {
+                    document.body.classList.add("visible"); // Aggiunge la classe visibile
+                }, 2000); // Aspetta 2 secondi
+            });
+        </script>
 
 
     </body>
