--- a/header.html
+++ b/header.html
@@ -76,9 +76,9 @@ header.html + CSS
 
         @media screen and (min-width: 1024px) {
         main {
-            max-width: 1200px; /* Limita la larghezza del contenuto */
-            padding: 5rem;     /* Mantiene lo spazio interno */
-            margin: 0 auto;    /* Centra il contenuto */
+            max-width: 1200px; 
+            padding: 5rem;     
+            margin: 0 auto;   
             }
         }
 
