--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page
         <script>
             document.addEventListener("DOMContentLoaded", function () {
                 setTimeout(function () {
-                    document.body.classList.add("visible"); // Aggiunge la classe visibile
-                }, 2000); // Aspetta 2 secondi
+                    document.body.classList.add("visible");
+                }, 2000); 
             });
         </script>
 
