Aggiornato il README e i file HTML per riflettere il nuovo branding e le restrizioni di licenza. Modificati i link e migliorata la coerenza del contenuto.

--- a/footer.html
+++ b/footer.html
@@ -2,12 +2,12 @@
 © 2025 GENiALABILE. All Rights Reserved.  
 A Bio-GPT Project—Designed by seiseisette.    
 ---
- 2025 Copyright @seiseisette | https://x.com/seiseisette
+ 2025 Copyright @seiseisette | https://x.com/seiseisette/
 ---
 Licensed under the Apache License, Version 2.0.
-You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
+You may obtain a copy of the License at https://www.apache.org/licenses/LICENSE-2.0/  
 ---
-hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page  
+hptts://www.genialabile.com/ | DARK MODE x Ultra-Minimalist Visual Landing Page  
 ---
 footer.html
 //-->
@@ -16,16 +16,16 @@ footer.html
 <footer> <b></b>
     ©2025 <a href="/" style="font-weight: normal">GENiALABILE</a>.
     All Rights Reserved.
-    A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette"  style="font-weight: normal">seiseisette</a>.
-    Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
+    A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
+    Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.<br>
     <!-- Musts Links -->
         <p class="imp-p" style="font-size: 0.6rem;"> <!--slap-->
             <br>
-            <a href="/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
-            <a href="/privacy-policy.html" style="font-weight: normal">PRIVACY</a> | 
-            <a href="/cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
-            <a href="/accessibility.html" style="font-weight: normal">ACCESS</a> | 
-            <a href="/contacts.html" style="font-weight: normal">CONTACT</a>
+            <a href="https://www.genialabile.com/terms-and-conditions" style="font-weight: normal">TERMS</a> | 
+            <a href="https://www.genialabile.com/privacy-policy" style="font-weight: normal">PRIVACY</a> | 
+            <a href="https://www.genialabile.com/cookie-policy" style="font-weight: normal">COOKIES</a> | 
+            <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">ACCESS</a> | 
+            <a href="https://www.genialabile.com/contacts" style="font-weight: normal">CONTACT</a>
             <!-- | <a href="/faq.html" style="font-weight: normal">FAQ</a>  -->
         </p>
     <!-- <br><br><br><br><br><br><br> --->
