--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@ A Bio-GPT Project—Designed by seiseisette.
  2025 Copyright @seiseisette | https://x.com/seiseisette
 ---
 Licensed under the Apache License, Version 2.0.
-You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
+You may obtain a copy of the License at https://www.apache.org/licenses/LICENSE-2.0  
 ---
 hptts://www.genialabile.com | DARK MODE x Ultra-Minimalist Visual Landing Page  
 ---
@@ -14,7 +14,7 @@ header.html + CSS
 
 
 <!-- Header -->
-    <link rel="icon" href="gen-favicon-rd.ico?v=2" type="image/x-icon">
+    <link rel="icon" href="https://www.genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <meta name="color-scheme" content="dark">
